# fastforge-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test_log_agents.py
.github/workflows/: ci.yml  publish.yml
examples/use-cases/: observable-api.fastforge.yaml  postgres-api.fastforge.json  rag-observable.fastforge.json
fastforge/: __init__.py  capability_schema.py  cli.py  dispatch.py  generator_protocol.py  project_config.py
fastforge/ai_templates/: __init__.py  config.py  dependencies.py  lifespan.py
fastforge/ai_templates/app_kinds/: __init__.py  agent.py  rag.py  semantic_search.py
fastforge/ai_templates/embeddings/: __init__.py  bedrock_provider.py  cohere_provider.py  gemini_provider.py  huggingface_provider.py  local_provider.py  openai_provider.py  registry.py
fastforge/ai_templates/gateway/: __init__.py  bifrost_client.py  litellm_client.py  registry.py
fastforge/ai_templates/vector_store/: __init__.py  chromadb_provider.py  opensearch_provider.py  pgvector_provider.py  qdrant_provider.py  registry.py  vertex_ai_provider.py
fastforge/commands/: __init__.py  _shared.py  add.py  audit.py  ci_cmd.py  deploy.py  doctor.py  misc.py  new.py  secure.py  upgrade.py
fastforge/fragments/: model.py.j2  repository.py.j2  route.py.j2  service.py.j2  test_api.py.j2
fastforge/generators/: ai_app.py  ai_telemetry.py  auth.py  ci.py  deploy.py  kafka.py  model.py  observability.py  postgres.py  redis.py  secure.py
fastforge/infra_template/: cookiecutter.json
fastforge/infra_template/hooks/: post_gen_project.py
fastforge/infra_template/{{cookiecutter.project_slug}}-infrastructure/: README.md  docker-compose.app.yml  docker-compose.elasticsearch.yml  docker-compose.fluentbit.yml  docker-compose.kafka.yml  docker-compose.logstash.yml  docker-compose.mongodb.yml  docker-compose.postgres.yml  docker-compose.vault.yml  docker-compose.vector-agent.yml  docker-compose.vector-aggregator.yml  docker-compose.yml
fastforge/infra_template/{{cookiecutter.project_slug}}-infrastructure/fluentbit/: fluent-bit.conf  parsers.conf
fastforge/infra_template/{{cookiecutter.project_slug}}-infrastructure/logstash/pipeline/: logstash.conf
fastforge/infra_template/{{cookiecutter.project_slug}}-infrastructure/vault/policies/: app-policy.hcl
fastforge/infra_template/{{cookiecutter.project_slug}}-infrastructure/vector/: vector-agent.toml  vector-aggregator.toml
fastforge/presets/: __init__.py  event-service.fastforge.json  observable-api.fastforge.json  semantic-search.fastforge.json  simple-fastapi.fastforge.json
fastforge/template/: cookiecutter.json
fastforge/template/hooks/: post_gen_project.py
fastforge/template/{{cookiecutter.project_slug}}/: .codeclimate.yml  .dockerignore  .env.example  .env.production  .env.staging  .fastforge.json  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  qodana.yaml  sonar-project.properties
fastforge/template/{{cookiecutter.project_slug}}/app/: cache.py  config.py  dependencies.py  logging_config.py  main.py  secrets.py
fastforge/template/{{cookiecutter.project_slug}}/app/api/: exception_handlers.py
fastforge/template/{{cookiecutter.project_slug}}/app/api/models/: {{cookiecutter.model_name}}.py
fastforge/template/{{cookiecutter.project_slug}}/app/api/routes/: health.py  {{cookiecutter.model_name_plural}}.py
fastforge/template/{{cookiecutter.project_slug}}/app/db/: mongodb.py  sqlalchemy.py
fastforge/template/{{cookiecutter.project_slug}}/app/db/models/: {{cookiecutter.model_name}}.py
fastforge/template/{{cookiecutter.project_slug}}/app/middleware/: logging_middleware.py  security_headers.py
fastforge/template/{{cookiecutter.project_slug}}/app/repositories/: {{cookiecutter.model_name}}_repository.py
fastforge/template/{{cookiecutter.project_slug}}/app/services/: {{cookiecutter.model_name}}_service.py
fastforge/template/{{cookiecutter.project_slug}}/app/streaming/: consumer.py  handler.py  producer.py
fastforge/template/{{cookiecutter.project_slug}}/docker/fluentbit/: fluent-bit.conf
fastforge/template/{{cookiecutter.project_slug}}/docker/vector/: vector.toml
fastforge/template/{{cookiecutter.project_slug}}/infra/: docker-compose.yml
fastforge/template/{{cookiecutter.project_slug}}/tests/: conftest.py  test_api.py
tests/: smoke_ecosystem.py  test_ai_app_generator.py  test_ai_telemetry_generator.py  test_capability_schema.py  test_cli_subcommands.py  test_cli_use_case_presets.py  test_cmd_modules.py  test_commands.py  test_dispatch.py  test_e2e_generated.py  test_generator_protocol.py  test_generators.py  test_project_config.py
